
- Function "replaceVariables" exported and documented.

- Corrected labels in confidence interval dialog (weights instead alpha). 

- User submitted graphs are supported.

- Improved debug information.

- Dialog for loading of R objects gets "Cancel" button.

- GPL notice is shown when the GUI is used for the first time

- The bundled version closes the R console if the GUI is closed.

- Fixed: Checking for updates happend on the event dispatch thread and
  in rare cases the GUI did not respond any more as long as the method 
  was trying to connect to the server.

- Fixed: Some objects with epsilon edges from gMCP < 0.7 could not
  be updated with function updateGraphToNewClassDefinition.
  
- Fixed: Since 0.7-1 graphGUI threw an error if the parameter graph is
  a character vector and an graph object with an equal name
  already existed.


Version 0.7-2 (11-12-2011, Rev. 1016)
=====================================

- Fixed: In 0.7-1 the options dialog throws an error.

- Fixed: In the verbose output of 0.7-1 some weights were shown 
  as p_i instead w_i.

- The dialogs for updating/deleting edges and nodes are now modal dialogs.

- The adjacency matrix is not editable while testing is in progress.

- Improved debug information

- Improved drag'n'drop. 
  Also edge labels do not jump any more when double clicked.

 29 files changed, 178 insertions(+), 198 deletions(-)


Version 0.7-1 (22-11-2011, Rev. 1001)
=====================================

- The GUI will (optionally) look for a newer version of 
  gMCP on CRAN.

- Simes test is available.

- New function "subGraph" for the creation of subgraphs.

- User defined power functions.

 52 files changed, 551 insertions(+), 266 deletions(-)
 
  
Version 0.7-0 (26-Aug-2011, Rev. 964)
=====================================

- Package "graph" is no longer a dependency.
  Class definition of graphMCP has changed and is no
  longer a subclass of graphNEL. The function
  gMCP:::updateGraphToNewClassDefinition(object)